--- a/versions/v1_2_0/styles.css
+++ b/versions/v1_2_0/styles.css
@@ -135,7 +135,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 5;
+    z-index: 4;
 }
 
 .ui .stats {
@@ -223,6 +223,8 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
+    user-select: none !important;
+    -webkit-user-drag: none !important;
 
     &.active {
         opacity: 1;
@@ -283,7 +285,69 @@ body {
 }
 
 .window[windowId="shopMenu"] {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+
+    & #upgrades {
+        width: fit-content;
+        height: 400px;
+        padding: 1rem;
+        background: #0008;
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+
+        & .upgrade {
+            position: relative;
+            width: 500px;
+            height: 4rem;
+            padding: .5rem;
+            background: var(--theme-secondary);
+
+            & .name {
+                position: relative;
+                width: 100%;
+                height: 1rem;
+                top: .5rem;
+                display: flex;
+                justify-content: left;
+                align-items: center;
+                text-indent: .5rem;
+                color: #fffb;
+            }
+
+            & .upgradeLevelContainer {
+                position: relative;
+                top: calc(100% - 1rem);
+                transform: translate(0%, -100%);
+                width: calc(100% - 5.5rem);
+                height: 2rem;
+                background: var(--theme-secondary);
+                border: 1px solid black;
+
+                & .upgradeLevel {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 0%;
+                    height: 100%;
+                    background:rgb(0, 160, 255);
+                }
+            }
+
+            & button {
+                position: absolute;
+                width: 5rem;
+                height: calc(2rem + 2px);
+                left: calc(100% - .5rem);
+                top: calc(100% - .5rem);
+                transform: translate(-100%, -100%);
+            }
+        }
+    }
 }
 
 /* End windows */
@@ -304,7 +368,7 @@ body {
     background: #000d;
     backdrop-filter: blur(10px);
     border-radius: 8px;
-    z-index: 2;
+    z-index: 5;
 }
 
 #gameEditor * {
