--- a/styles.css
+++ b/styles.css
@@ -22,29 +22,35 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 200px;
+    width: fit-content;
     height: fit-content;
     padding: 1rem;
     border-radius: 13px;
-    background: #f6f6f6;
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
+    background: #ffffff;
+    display: grid;
+    grid-template-columns: repeat(5, 80px);
+    gap: 5px;
 }
 
 .container h3 {
-    margin: none;
+    position: absolute;
+    top: -2rem;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    width: fit-content;
+    height: fit-content;
 }
 
 .version {
     width: 100%;
-    height: 2rem;
+    height: 80px;
     background: transparent;
     border: none;
     border-radius: 5px;
     outline: none;
     font-family: 'lexend';
     font-size: 16px;
+    cursor: pointer;
     transition: 100ms ease-out background;
 
     &:hover {
