--- a/versions/v1_2_1/styles.css
+++ b/versions/v1_2_1/styles.css
@@ -237,15 +237,13 @@ body {
 .window[windowId="mainMenu"] {
     background: #0004;
 
-    & h1 {
+    & img {
         position: absolute;
         top: 30%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 300px;
+        width: 200px;
         height: fit-content;
-        text-align: center;
-        color: white;
     }
 
     & button {
